Trying to fix issue on iPhone 4 where home and justin's project menus are not clickable.

--- a/grant-2015/less/grant-2015-main.less
+++ b/grant-2015/less/grant-2015-main.less
@@ -567,6 +567,7 @@ body.grant-2015 .grant-2015-content{
 				-moz-transition: border-left 1s ease,border-right 1s ease-out,width 1s ease;
 				-o-transition: border-left 1s ease,border-right 1s ease-out,width 1s ease;
 				transition: border-left 1s ease,border-right 1s ease-out,width 1s ease;
+				z-index: 2;
 				.nav-img-wrapper{
 					height:50px;
 					position:relative;
